# liquid-galaxy

./: LICENSE  README
earth/builds/: README
earth/config/: drivers_template.ini  drivers_template.ini-5.2  drivers_template.ini-6.0  myplaces.kml
earth/config/master/: GECommonSettings.conf  GECommonSettings.conf-6.0  GECommonSettings.conf-6.0-moon  GECommonSettings.conf-6.0-ocean  GECommonSettings.conf.m4  GoogleEarthPlus.conf  GoogleEarthPlus.conf-4.X  GoogleEarthPlus.conf-5.2  GoogleEarthPlus.conf-6.0
earth/config/slave/: GECommonSettings.conf  GECommonSettings.conf-6.0  GECommonSettings.conf-6.0-earth  GECommonSettings.conf-6.0-mars  GECommonSettings.conf-6.0.m4  GoogleEarthPlus.conf-4.X  GoogleEarthPlus.conf-5.2  GoogleEarthPlus.conf-6.0
earth/kml/master/: cached_default_view.kml  myplaces.kml
earth/kml/slave/: myplaces.kml
earth/scripts/: extract-new-build.sh  launch-earth.sh  run-earth-bin.sh  run-earth.sh  set-planet.sh  write-drivers-ini.sh
gnu_linux/etc/: hosts  hosts.squid  iptables.conf  logrotate.conf  rsyslog.conf  sudoers
gnu_linux/etc/X11/: xorg.conf
gnu_linux/etc/apache2/: ports.conf
gnu_linux/etc/default/: grub  unclutter
gnu_linux/etc/dhcp/: dhclient.conf
gnu_linux/etc/init/: galaxy.conf  lightdm.conf  lxdm.conf
gnu_linux/etc/lighttpd/: lighttpd.conf
gnu_linux/etc/lxdm/: lxdm.conf
gnu_linux/home/lg/: crontab
gnu_linux/patches/: hid.patch
gnu_linux/sbin/: dhclient-script-nm
input_event/: README.txt  read-event.c  write-event.c
kamelopard/: .gitignore  Changelog  Gemfile  NOTES  README  Rakefile  TODO  kamelopard.gemspec
kamelopard/lib/: kamelopard.rb
kamelopard/spec/: test.rb
lg-pano/: .gitignore  COPYRIGHT  ChangeLog  INSTALL  Makefile.in  README  TODO  config.h.in  configure  configure.in  fract.cpp  read-event.c  read-event.h  xiv.1  xiv.cpp  xiv.desktop  xiv.h  xiv.odt  xiv.ppm  xiv.sh  xiv_readers.cpp  xiv_readers.h  xiv_utils.cpp  xiv_utils.h
php-interface/: change.php  index.php  javascript.js  notes.txt  queries.txt  queries.txt~  redirect.m4  style.css  sync_inc.php  sync_nlc.php  sync_touchscreen.php
php-interface/kml/: README  master.kml
spacenav-rezero/: Makefile  README
spacenav-rezero/src/: spacenav-rezero.cpp
(+48 files in other folders)
